--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,8 +9,24 @@
     </head>
     <body>
         <h1>2048</h1>
-        <br>
         <h2>Score: <span id="score">0</span></h2>
-        <div id="board"></div>
+        <div id="board">
+            <div class="tile">1</div>
+            <div class="tile">1</div>
+            <div class="tile">1</div>
+            <div class="tile">1</div>
+            <div class="tile">2</div>
+            <div class="tile">2</div>
+            <div class="tile">2</div>
+            <div class="tile">2</div>
+            <div class="tile">4</div>
+            <div class="tile">4</div>
+            <div class="tile">4</div>
+            <div class="tile">4</div>
+            <div class="tile">8</div>
+            <div class="tile">8</div>
+            <div class="tile">8</div>
+            <div class="tile">8</div>
+        </div>
     </body>
 </html>
