--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,28 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>2048</title>
         <link rel="stylesheet" href="popup.css" />
-        <script src="popup/popup.js" defer></script>
+        <script src="popup.js" defer></script>
     </head>
     <body>
         <h1>2048</h1>
         <h2>Score: <span id="score">0</span></h2>
-        <div id="board">
-            <div class="tile">1</div>
-            <div class="tile">1</div>
-            <div class="tile">1</div>
-            <div class="tile">1</div>
-            <div class="tile">2</div>
-            <div class="tile">2</div>
-            <div class="tile">2</div>
-            <div class="tile">2</div>
-            <div class="tile">4</div>
-            <div class="tile">4</div>
-            <div class="tile">4</div>
-            <div class="tile">4</div>
-            <div class="tile">8</div>
-            <div class="tile">8</div>
-            <div class="tile">8</div>
-            <div class="tile">8</div>
-        </div>
+        <div id="board"></div>
     </body>
 </html>
